@@ -29,6 +29,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #9632: Remove sys.setfilesystemencoding() function: use
+  PYTHONFSENCODING environment variable to set the filesystem encoding at
+  Python startup. sys.setfilesystemencoding() creates inconsistencies because
+  it is unable to reencode all filenames in all objects.
+
 - Issue #9410: Various optimizations to the pickle module, leading to
   speedups up to 4x (depending on the benchmark).  Mostly ported from
   Unladen Swallow; initial patch by Alexandre Vassalotti.
